📱 make static grid layout

--- a/src/components/layout/CoreLayout/CoreLayout.module.scss
+++ b/src/components/layout/CoreLayout/CoreLayout.module.scss
@@ -1,9 +1,9 @@
 .layoutWrapper {
-  @apply flex flex-col;
+  @apply fixed top-0 left-0;
 
-  min-height: 100dvh;
-
-  main {
-    flex-grow: 1;
-  }
+  height: 100dvh;
+  width: 100%;
+  overflow: hidden;
+  display: grid;
+  grid-template-rows: max-content 1fr max-content;
 }
