--- a/src/styles/templates.scss
+++ b/src/styles/templates.scss
@@ -6,6 +6,7 @@
 @import "mixins/customScrollbar";
 @import "mixins/svgMonofill";
 @import "mixins/full-bleed";
+@import "mixins/padding";
 
 // Import templates
 @import "templates/contentlessOverlay";
