--- a/src/components/layout/PageBody/PageBody.module.scss
+++ b/src/components/layout/PageBody/PageBody.module.scss
@@ -1,8 +1,6 @@
 @import "src/styles/templates";
 
 .pageBody {
-  @extend %scrollable;
-
   @apply bg-primary-bg;
 
   $br: .4rem;
@@ -13,9 +11,12 @@
   grid-column: 2 / span $cols;
   grid-gap: inherit;
   grid-template-columns: repeat($cols, 1fr);
+  overflow: hidden;
+
+  @include paddingVertical(toLocalEm(32, 20));
 
   section.scrollable {
-    @apply bg-red-300/25;
+    @extend %scrollable;
 
     grid-column: 2 / span calc($cols - 2);
   }
