--- a/src/components/layout/Header/Header.module.scss
+++ b/src/components/layout/Header/Header.module.scss
@@ -5,7 +5,11 @@ header.appHeader {
 
   .container {
     @apply bg-primary-bg
-            flex justify-between items-center;
+            flex justify-between items-center
+           border-secondary-accent;
+
+    border-width: 1px;
+    border-style: solid;
 
     @include paddingVertical(toLocalEm(8, 20));
     @include paddingHorizontal(toLocalEm(24, 20));
