--- a/src/components/layout/PageBody/PageBody.module.scss
+++ b/src/components/layout/PageBody/PageBody.module.scss
@@ -15,7 +15,7 @@
 
   @include paddingVertical(toLocalEm(32, 20));
 
-  section.scrollable {
+  .scrollable {
     @extend %scrollable;
 
     grid-column: 2 / span calc($cols - 2);
