--- a/src/styles/templates.scss
+++ b/src/styles/templates.scss
@@ -15,6 +15,7 @@
 @import "templates/notSelectable";
 @import "templates/scrollable";
 @import "templates/tabularNumbers";
+@import "templates/withAccentBorder";
 
 // Import functions
 @import "functions/globalPadding";
