--- a/src/components/layout/Header/Header.module.scss
+++ b/src/components/layout/Header/Header.module.scss
@@ -4,12 +4,10 @@ header.appHeader {
   font-size: 1rem; // 1em = 20px
 
   .container {
-    @apply bg-primary-bg
-            flex justify-between items-center
-           border-secondary-accent;
+    @extend %withAccentBorder;
 
-    border-width: 1px;
-    border-style: solid;
+    @apply bg-primary-bg
+            flex justify-between items-center;
 
     @include paddingVertical(toLocalEm(8, 20));
     @include paddingHorizontal(toLocalEm(24, 20));
