🆕 add new mixin

--- a/src/styles/templates.scss
+++ b/src/styles/templates.scss
@@ -7,6 +7,7 @@
 @import "mixins/svgMonofill";
 @import "mixins/full-bleed";
 @import "mixins/padding";
+@import "mixins/desktopHover";
 
 // Import templates
 @import "templates/contentlessOverlay";
