--- a/src/components/layout/PageHeader/PageHeader.module.scss
+++ b/src/components/layout/PageHeader/PageHeader.module.scss
@@ -18,4 +18,8 @@ header.pageHeader {
   svg {
     @include svgMonofill(currentColor);
   }
+
+  @include endAtFixed($mobileBreakpoint) {
+    grid-column: 1 / span var(--cols-count);
+  }
 }
