--- a/src/components/layout/PageHeader/PageHeader.module.scss
+++ b/src/components/layout/PageHeader/PageHeader.module.scss
@@ -21,5 +21,8 @@ header.pageHeader {
 
   @include endAtFixed($mobileBreakpoint) {
     grid-column: 1 / span var(--cols-count);
+
+    @include paddingHorizontal(toLocalEm(16, 24));
+    @include paddingVertical(toLocalEm(24, 24));
   }
 }
