--- a/src/styles/templates/withAccentBorder.scss
+++ b/src/styles/templates/withAccentBorder.scss
@@ -4,3 +4,9 @@
   border-width: 1px;
   border-style: solid;
 }
+
+%fancyCard {
+  @extend %withAccentBorder;
+
+  filter: drop-shadow(0 1px 10px rgb(0 0 0 / .06));
+}
