--- a/src/styles/templates/withAccentBorder.scss
+++ b/src/styles/templates/withAccentBorder.scss
@@ -5,8 +5,10 @@
   border-style: solid;
 }
 
-%fancyCard {
-  @extend %withAccentBorder;
-
+%withFancyShadow {
   filter: drop-shadow(0 1px 10px rgb(0 0 0 / .06));
+}
+
+%fancyCard {
+  @extend %withAccentBorder, %withFancyShadow;
 }
